# Perseus

./: .dockerignore  .gitignore  DASHBOARD_CUSTOMIZATION.md  Dockerfile  Dockerfile.minimal  FEATURES_ROADMAP.md  LICENSE  LICENSE.md  Makefile  PROJECT_STRUCTURE.md  README.md  REPLACE_AWACS_IMAGE.md  USER_MANUAL.md  docker-compose-minimal.yml  docker-compose-simple.yml  docker-compose.dev.yml  docker-compose.yml  find-host-ip.sh  find_docker_image.py  git_monitor.py  git_watch.sh  open-webui-sbom.json  os_bom_test_results.json  package-agent-final.sh  package-agent.sh  pytest.ini  requirements.txt  requirements_minimal.txt  run_telemetry_server.py  sbom-a23d7d7f-b1ab-4cd8-b231-35f5c481ec10.json  sbom-cli.sh  sbom-d6d6a1d4-8958-473f-8767-0b9abb7e5575.json  sbom-d6d6a1d4-8958-473f-8767-0b9abb7e5575_report.html  sbom_formatter.py  sbom_html_generator.py  telemetry-server-config.yaml  test-scan-report.json  test_os_simple.py  test_telemetry.sh
config/: version.json
data/test-cpp-project/: CMakeLists.txt  conanfile.txt
data/test-cpp-project/src/: data_processor.cpp  data_processor.h  main.cpp  network_client.cpp  network_client.h
debug-agent/: README.md  __init__.py  agent.py  collector.py  config.yaml  debug.sh  requirements.txt  run.sh  setup.sh  test-analyzer.py  transport.py
docs/: API_VULNERABILITY_SCANNING.md  ARCHITECTURE.md  COUNT_IMPROVEMENTS.md  DATABASE_SETUP.md  DOCKER_SBOM_EXAMPLES.md  PROJECT_STRUCTURE.md  TELEMETRY_TESTING.md  TOOL_PATH_DETECTION.md  USER_MANUAL.md  VULNERABILITY_SCANNING.md
k8s/: README.md  api.yaml  background-jobs.yaml  ingress.yaml  (+2 more)
(+355 files in other folders)
